--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
             <div>
 
                 <div class="button">
-                    <i class="material-icons">delete</i>
+                    <div class="material-icons">delete</div>
                 </div>
 
                 <div class="button">
-                    <i class="material-icons">exit_to_app</i>
+                    <div class="material-icons">exit_to_app</div>
                 </div>
 
             </div>
@@ -34,6 +34,24 @@
         </div>
 
         <div class="excel__toolbar">
+            <div class="button">
+                <div class="material-icons">format_align_left</div>
+            </div>
+            <div class="button">
+                <div class="material-icons">format_align_center</div>
+            </div>
+            <div class="button">
+                <div class="material-icons">format_align_right</div>
+            </div>
+            <div class="button">
+                <div class="material-icons">format_bold</div>
+            </div>
+            <div class="button">
+                <div class="material-icons">format_italic</div>
+            </div>
+            <div class="button">
+                <div class="material-icons">format_underline</div>
+            </div>
 
         </div>
 
