--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
             <div>
 
                 <div class="button">
-                    <div class="material-icons">delete</div>
+                    <i class="material-icons">delete</i>
                 </div>
 
                 <div class="button">
-                    <div class="material-icons">exit_to_app</div>
+                    <i class="material-icons">exit_to_app</i>
                 </div>
 
             </div>
@@ -34,23 +34,29 @@
         </div>
 
         <div class="excel__toolbar">
+
             <div class="button">
-                <div class="material-icons">format_align_left</div>
+                <i class="material-icons">format_align_left</i>
             </div>
+
             <div class="button">
-                <div class="material-icons">format_align_center</div>
+                <i class="material-icons">format_align_center</i>
             </div>
+
             <div class="button">
-                <div class="material-icons">format_align_right</div>
+                <i class="material-icons">format_align_right</i>
             </div>
+
             <div class="button">
-                <div class="material-icons">format_bold</div>
+                <i class="material-icons">format_bold</i>
             </div>
+
             <div class="button">
-                <div class="material-icons">format_italic</div>
+                <i class="material-icons">format_italic</i>
             </div>
+
             <div class="button">
-                <div class="material-icons">format_underline</div>
+                <i class="material-icons">format_underlined</i>
             </div>
 
         </div>
@@ -61,6 +67,130 @@
         </div>
 
         <div class="excel__table">
+
+            <div class="row">
+
+                <div class="row-info"></div>
+
+                <div class="row-data">
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+                    <div class="column">
+                        A
+                    </div>
+                    <div class="column">
+                        B
+                    </div>
+                    <div class="column">
+                        C
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="row-info">
+                    1
+                </div>
+
+                <div class="row-data">
+                    <div class="cell selected" contenteditable="">A1</div>
+                    <div class="cell" contenteditable="">B2</div>
+                    <div class="cell" contenteditable="">C3</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="row-info">
+                    2
+                </div>
+
+                <div class="row-data">
+                    <div class="cell">A1</div>
+                    <div class="cell">B2</div>
+                    <div class="cell">C3</div>
+                </div>
+            </div>
 
         </div>
 
